# contrek

./: .gitignore  .rubocop.yml  CHANGELOG.md  LICENSE-MIT.md  LICENSE.md  PERFORMANCE.md  README.md  Rakefile  contrek.gemspec
ext/cpp_polygon_finder/PolygonFinder/: .cproject  .project  CMakeLists.txt  Makefile  clean.sh
ext/cpp_polygon_finder/PolygonFinder/examples/: example.cpp
ext/cpp_polygon_finder/PolygonFinder/src/: ContrekApi.h  Main.cpp  Tests.cpp  Tests.h
ext/cpp_polygon_finder/PolygonFinder/src/polygon/: CpuTimer.h
ext/cpp_polygon_finder/PolygonFinder/src/polygon/bitmaps/: Bitmap.cpp  Bitmap.h  FastPngBitmap.cpp  FastPngBitmap.h  PngBitmap.cpp  PngBitmap.h  RawBitmap.cpp  RawBitmap.h  RemoteFastPngBitmap.cpp  RemoteFastPngBitmap.h  X_picopng.cpp  spng.c
ext/cpp_polygon_finder/PolygonFinder/src/polygon/finder/: FinderUtils.cpp  FinderUtils.h  List.cpp  List.h  Lists.cpp  Lists.h  Node.cpp  Node.h  NodeCluster.cpp  NodeCluster.h  PointPool.cpp  PointPool.h  Polygon.h  PolygonFinder.cpp  PolygonFinder.h  Primitives.h  RectBounds.h
ext/cpp_polygon_finder/PolygonFinder/src/polygon/finder/concurrent/: ClippedPolygonFinder.cpp  ClippedPolygonFinder.h  Cluster.cpp  Cluster.h  (+45 more)
ext/cpp_polygon_finder/PolygonFinder/src/polygon/matchers/: Matcher.cpp  Matcher.h  RGBMatcher.cpp  RGBMatcher.h  RGBNotMatcher.cpp  RGBNotMatcher.h  ValueNotMatcher.cpp  ValueNotMatcher.h
ext/cpp_polygon_finder/PolygonFinder/src/polygon/reducers/: LinearReducer.cpp  LinearReducer.h  Reducer.cpp  Reducer.h  UniqReducer.cpp  UniqReducer.h  VisvalingamReducer.cpp  VisvalingamReducer.h
(+138 files in other folders)
